--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "split-type": "^0.3.4",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
